-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (workspace/open/src/hotspot/share/runtime/sharedRuntime.cpp:3006), pid=17797, tid=17798
# assert(shared_entry->compare_code(buf->code_begin(), buffer.insts_size())) failed: code must match
Stack: [0x00007fc42a258000,0x00007fc42a359000], sp=0x00007fc42a356fe0, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17eeabd] AdapterHandlerLibrary::get_adapter0(methodHandle const&)+0x87d
V [libjvm.so+0x17ef7d9] AdapterHandlerLibrary::get_adapter(methodHandle const&)+0x19
V [libjvm.so+0x1534aac] Method::make_adapters(methodHandle const&, Thread*)+0x1c
V [libjvm.so+0xe92275] InstanceKlass::link_methods(Thread*)+0x205
V [libjvm.so+0xe92b75] InstanceKlass::link_class_impl(Thread*)+0x625
V [libjvm.so+0xe9385e] InstanceKlass::initialize_impl(Thread*)+0x58e
V [libjvm.so+0xe93b36] InstanceKlass::initialize_impl(Thread*)+0x866
V [libjvm.so+0x100a2d5] get_method_id(JNIEnv_*, _jclass*, char const*, char const*, bool, Thread*) [clone .constprop.0]+0x135
V [libjvm.so+0x100aaee] jni_GetStaticMethodID+0x13e
C [libjli.so+0x46ec] JavaMain+0xcfc
C [libjli.so+0x7c89] ThreadJavaMain+0x9
# assert(shared_entry->compare_code(buf->code_begin(), buffer.insts_size())) failed: code must match
Stack: [0x00007fc42a258000,0x00007fc42a359000], sp=0x00007fc42a356fe0, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x17eeabd] AdapterHandlerLibrary::get_adapter0(methodHandle const&)+0x87d
V [libjvm.so+0x17ef7d9] AdapterHandlerLibrary::get_adapter(methodHandle const&)+0x19
V [libjvm.so+0x1534aac] Method::make_adapters(methodHandle const&, Thread*)+0x1c
V [libjvm.so+0xe92275] InstanceKlass::link_methods(Thread*)+0x205
V [libjvm.so+0xe92b75] InstanceKlass::link_class_impl(Thread*)+0x625
V [libjvm.so+0xe9385e] InstanceKlass::initialize_impl(Thread*)+0x58e
V [libjvm.so+0xe93b36] InstanceKlass::initialize_impl(Thread*)+0x866
V [libjvm.so+0x100a2d5] get_method_id(JNIEnv_*, _jclass*, char const*, char const*, bool, Thread*) [clone .constprop.0]+0x135
V [libjvm.so+0x100aaee] jni_GetStaticMethodID+0x13e
C [libjli.so+0x46ec] JavaMain+0xcfc
C [libjli.so+0x7c89] ThreadJavaMain+0x9