8258480: [lworld] Adapter creation asserts with -XX:+VerifyAdapterSharing